umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_phenanthrene.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :aromatic [{:atoms [0 1 2 3 4 5 6 7 8 9 10 11 12 13]}]
      :atoms [
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#v3#a"
        "C#v3#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#v3#a"
        "C#v3#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 0 :single]
        [3 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]
        [9 4 :single]
        [8 10 :single]
        [10 11 :single]
        [11 12 :single]
        [12 13 :single]
        [13 9 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :aromatic [{:atoms [0 1 2 3 4 5 6 7 8 9 10 11 12 13]}]
      :atoms [
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#v3#a"
        "C#v3#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#v3#a"
        "C#v3#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"
        "C#h#v2#a"]
      :bonds [
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 4 :single]
        [4 5 :single]
        [5 0 :single]
        [3 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]
        [9 4 :single]
        [8 10 :single]
        [10 11 :single]
        [11 12 :single]
        [12 13 :single]
        [13 9 :single]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
