umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_pyrrolyl.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :aromatic-systems [{:atoms [0 1 2 3 4] :attrs "[2,1,1,1,1]"}]
      :atoms ["N#u" "C#h" "C#h" "C#h" "C#h"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :single] [0 4 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :aromatic-systems [{:atoms [0 1 2 3 4] :attrs "[2,1,1,1,1]"}]
      :atoms ["N#u" "C#h" "C#h" "C#h" "C#h"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :single] [0 4 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :aromatic-systems [{:atoms [0 1 2 3 4] :attrs "[2,1,1,1,1]"}]
      :atoms ["N#u" "C#h" "C#h" "C#h" "C#h"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :single] [0 4 :single]]}
    :success true
    :tie-breaks [1 2 3 4]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      1 ["C#u#v2#a" "C#h#v2#a"]
      2 ["C#u#v2#a" "C#h#v2#a"]
      3 ["C#u#v2#a" "C#h#v2#a"]
      4 ["C#u#v2#a" "C#h#v2#a"]}}}
