umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_quinoline.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :aromatic-systems [{:atoms [0 1 2 3 4 5 6 7 8 9] :attrs "[1,1,1,1,1,1,1,1,1,1]"}]
      :atoms ["C#h" "C#h" "C#h" "C" "C#h" "C#h" "C#h" "C#h" "C" "N#n"]
      :bonds [
        [0 9 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 8 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {
      :aromatic-systems [{:atoms [0 1 2 3 4 5 6 7 8 9] :attrs "[1,1,1,1,1,1,1,1,1,1]"}]
      :atoms ["C#h" "C#h" "C#h" "C" "C#h" "C#h" "C#h" "C#h" "C" "N#n"]
      :bonds [
        [0 9 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 8 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {
      :aromatic-systems [{:atoms [0 1 2 3 4 5 6 7 8 9] :attrs "[1,1,1,1,1,1,1,1,1,1]"}]
      :atoms ["C#h" "C#h" "C#h" "C" "C#h" "C#h" "C#h" "C#h" "C" "N#n"]
      :bonds [
        [0 9 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 8 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {
      :aromatic-systems [{:atoms [0 1 2 3 4 5 6 7 8 9] :attrs "[1,1,1,1,1,1,1,1,1,1]"}]
      :atoms ["C#h" "C#h" "C#h" "C" "C#h" "C#h" "C#h" "C#h" "C" "N#n"]
      :bonds [
        [0 9 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 8 :single]
        [3 4 :single]
        [4 5 :single]
        [5 6 :single]
        [6 7 :single]
        [7 8 :single]
        [8 9 :single]]}
    :success true
    :tie-breaks []}}
