umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@aromatic_toluene.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :aromatic [{:atoms [0 1 2 3 4 5] :electrons [1 1 1 1 1 1] :type ""}]
      :atoms ["C#v3#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h3#v"]
      :bonds [
        [0 1 :aromatic]
        [1 2 :aromatic]
        [2 3 :aromatic]
        [3 4 :aromatic]
        [4 5 :aromatic]
        [0 5 :aromatic]
        [0 6 :single]]}
    :success true}
  :counts {
    :output {
      :aromatic [{:atoms [0 1 2 3 4 5] :electrons [1 1 1 1 1 1] :type ""}]
      :atoms ["C#v3#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h#v2#a" "C#h3#v"]
      :bonds [
        [0 1 :aromatic]
        [1 2 :aromatic]
        [2 3 :aromatic]
        [3 4 :aromatic]
        [4 5 :aromatic]
        [0 5 :aromatic]
        [0 6 :single]]}
    :success true}}
